feat(persistence): add validation, public IDs and error handling