@@ -1,16 +1,18 @@
 package org.example.pruebatecnicaecommerce.infrastructure.persistence.adapter;
 
 import lombok.RequiredArgsConstructor;
-
 import org.example.pruebatecnicaecommerce.domain.model.order.Order;
+
 import org.example.pruebatecnicaecommerce.domain.model.order.OrderRepository;
 import org.example.pruebatecnicaecommerce.infrastructure.persistence.mapper.OrderMapper;
+import org.example.pruebatecnicaecommerce.infrastructure.persistence.order.OrderEntity;
 import org.example.pruebatecnicaecommerce.infrastructure.persistence.order.JpaOrderRepository;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
@@ -19,20 +21,45 @@ public class OrderJpaRepositoryAdapter implements OrderRepository {
     private final JpaOrderRepository jpaRepository;
 
     @Override
-    public void save(Order order) {
-        jpaRepository.save(OrderMapper.toEntity(order));
+    public Order save(Order order) {
+        OrderEntity entity;
+
+        if (order.getId() != null) {
+            entity = jpaRepository.findById(order.getId())
+                    .orElseGet(() -> OrderMapper.toEntity(order));
+
+            OrderMapper.updateEntity(entity, order);
+        } else {
+            entity = OrderMapper.toEntity(order);
+        }
+
+        OrderEntity saved = jpaRepository.save(entity);
+        return OrderMapper.toDomain(saved);
     }
 
     @Override
-    public Optional<Order> findById(UUID orderId) {
-        return jpaRepository.findById(orderId).map(OrderMapper::toDomain);
+    public Optional<Order> findById(UUID id) {
+        return jpaRepository.findById(id)
+                .map(OrderMapper::toDomain);
     }
 
     @Override
-    public List<Order> findByCustomerId(String customerId) {
-        return jpaRepository.findByCustomerId(customerId)
-                .stream()
+    public Optional<Order> findByPublicId(String publicId) {
+        return jpaRepository.findByPublicId(publicId)
+                .map(OrderMapper::toDomain);
+    }
+
+    @Override
+    public List<Order> findByCustomerId(UUID customerId) {
+        return jpaRepository.findByCustomerId(customerId).stream()
                 .map(OrderMapper::toDomain)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<Order> findAll() {
+        return jpaRepository.findAll().stream()
+                .map(OrderMapper::toDomain)
+                .collect(Collectors.toList());
     }
 }
